--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.4",
     "moment": "^2.24.0",
     "puppeteer": "^1.15.0",
     "shelljs": "^0.8.3"
